--- a/client/app/index.html
+++ b/client/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="js/vendor/angular-fx/dist/angular-fx.min.css" />
     <link rel="stylesheet" type="text/css" href="css/shadergraph.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/dark-theme.css" />
 </head>
 <body>
     <div class="main-content" data-ng-app="trafficEnv">
