Added frontend API service to get scripts

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <script type="text/javascript" src="js/vendor/angular/angular.min.js"></script>
     <script type="text/javascript" src="js/vendor/angular-route-segment/build/angular-route-segment.js"></script>
+    <script type="text/javascript" src="js/vendor/angular-resource/angular-resource.min.js"></script>
     <!-- <script type="text/javascript" src="js/vendor/shadergraph.js"></script> -->
     <script type="text/javascript" src="js/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="js/vendor/ace-builds/src-min-noconflict/ace.js"></script>
@@ -12,6 +13,7 @@
     <script type="text/javascript" src="js/vendor/angular-tree-control/angular-tree-control.js"></script>
     <script type="text/javascript" src="js/vendor/angular-fx/dist/angular-fx.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/services/apiservice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/angular-tree-control/css/tree-control.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/animate.css/animate.min.css" />
