--- a/client/app/index.html
+++ b/client/app/index.html
@@ -27,7 +27,7 @@
         <div class="panel-top"></div>
         <div class="vertical-separator"></div>
         <div data-panel-browser="" class="panel-main">
-            <div class="nav-tree-container">
+            <div class="nav-tree-container iScroll">
                     <treecontrol
                         class="tree-dark"
                         tree-model="scriptsDirectories"
