--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="js/vendor/angular-ui-ace/ui-ace.min.js"></script>
     <script type="text/javascript" src="js/vendor/angular-tree-control/angular-tree-control.js"></script>
     <script type="text/javascript" src="js/vendor/angular-fx/dist/angular-fx.min.js"></script>
+    <script type="text/javascript" src="js/vendor/socket.io-client/socket.io.js"></script>
+    <script type="text/javascript" src="js/vendor/angular-socket-io/socket.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
