Introduced model resources

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
             <div class="nav-tree-container">
                     <treecontrol
                         class="tree-dark"
-                        tree-model="scriptsDirectories"
+                        tree-model="treeFiles"
                         options="treeOptions"
                         on-selection="select(node)"
                         selected-node="selectedNode"
