--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,6 +14,9 @@
     <script type="text/javascript" src="js/vendor/angular-fx/dist/angular-fx.min.js"></script>
     <script type="text/javascript" src="js/vendor/socket.io-client/socket.io.js"></script>
     <script type="text/javascript" src="js/vendor/angular-socket-io/socket.min.js"></script>
+    <script type="text/javascript" src="js/vendor/eve/eve.js"></script>
+    <script type="text/javascript" src="js/vendor/raphael/raphael.min.js"></script>
+    <script type="text/javascript" src="js/lib/graffle.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
