--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,6 +15,12 @@
     <script type="text/javascript" src="js/vendor/raphael/raphael.min.js"></script>
     <script type="text/javascript" src="js/vendor/angular-native-dragdrop/draganddrop.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/directives/codetab.js"></script>
+    <script type="text/javascript" src="js/directives/modeltab.js"></script>
+    <script type="text/javascript" src="js/directives/panelbrowser.js"></script>
+    <script type="text/javascript" src="js/directives/pipelinetab.js"></script>
+    <script type="text/javascript" src="js/directives/tabset.js"></script>
+    <script type="text/javascript" src="js/directives/tabtype.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/angular-tree-control/css/tree-control.css" />
