Adding contextmenu interaction

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="js/directives/pipelinetab.js"></script>
     <script type="text/javascript" src="js/directives/tabset.js"></script>
     <script type="text/javascript" src="js/directives/tabtype.js"></script>
+    <script type="text/javascript" src="js/directives/ngcontextmenu.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/angular-tree-control/css/tree-control.css" />
