Added delete node functionality

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/directives/ngcontextmenu.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="js/vendor/Ionicons/css/ionicons.min.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/angular-tree-control/css/tree-control.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/animate.css/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="js/vendor/angular-fx/dist/angular-fx.min.css" />
