Adding panel header

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="main-content" data-ng-app="trafficEnv">
-        <div class="panel-top"></div>
+        <div data-panel-header="" class="panel-top"></div>
         <div class="vertical-separator"></div>
         <div data-panel-browser="" class="panel-main">
             <div class="nav-tree-container">
