--- a/client/app/index.html
+++ b/client/app/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="js/directives/tabset.js"></script>
     <script type="text/javascript" src="js/directives/tabtype.js"></script>
     <script type="text/javascript" src="js/directives/ngcontextmenu.js"></script>
+    <script type="text/javascript" src="js/directives/panelheader.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <script type="text/javascript" src="js/lib/firepad_trimmed.js"></script>
     <script type="text/javascript" src="js/lib/firebase-socketio.js"></script>
