--- a/client/app/admin.html
+++ b/client/app/admin.html
@@ -34,35 +34,26 @@
             border: 1px solid gray;
         }
 
-        input.form-control {
+        input[type='text'] {
             margin-bottom: -1px;
-            border-radius: 0;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
         }
 
-        input.form-control.first {
-            border-top-right-radius: 4px;
-            border-top-left-radius: 4px;
-        }
-
-        input.form-control.last {
-            border-bottom-right-radius: 4px;
-            border-bottom-left-radius: 4px;
-        }
-
-        input:last-child {
-            margin-top: 20px;
+        input[type='password'] {
+            border-top-right-radius: 0;
+            border-top-left-radius: 0;
+            margin-bottom: 30px;
         }
     </style>
 </head>
 <body>
     <div class="form-container">
-        <form method="POST" action="/register">
-            <legend>Register</legend>
+        <form method="POST" action="/login">
+            <legend>TODO</legend>
             {{ form.hidden_tag() }}
-            <input class="form-control first" type="text" name="username" value="" placeholder="Username" required="required" />
-            <input class="form-control" type="email" name="email" value="" placeholder="Email" required="required" />
+            <input class="form-control" type="text" name="username" value="" placeholder="Username" required="required" />
             <input class="form-control" type="password" name="password" value="" placeholder="Password" required="required" />
-            <input class="form-control last" type="password" name="confirm" value="" placeholder="Confirm password" required="required" />
             <input class="btn btn-lg btn-block" type="submit" value="Submit" />
         </form>
     </div>
