--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="js/vendor/raphael/raphael.min.js"></script>
     <script type="text/javascript" src="js/vendor/angular-native-dragdrop/draganddrop.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/directives/myscript.js"></script>
     <script type="text/javascript" src="js/directives/codetab.js"></script>
     <script type="text/javascript" src="js/directives/modeltab.js"></script>
     <script type="text/javascript" src="js/directives/panelbrowser.js"></script>
@@ -24,6 +25,8 @@
     <script type="text/javascript" src="js/directives/ngcontextmenu.js"></script>
     <script type="text/javascript" src="js/directives/panelheader.js"></script>
     <script type="text/javascript" src="js/directives/statustab.js"></script>
+    <script type="text/javascript" src="js/directives/interfacetab.js"></script>
+    <script type="text/javascript" src="js/directives/intcodetab.js"></script>
     <script type="text/javascript" src="js/services/apiservice.js"></script>
     <script type="text/javascript" src="js/lib/firepad_trimmed.js"></script>
     <script type="text/javascript" src="js/lib/firebase-socketio.js"></script>
