--- a/client/app/register.html
+++ b/client/app/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <style type="text/css">
         html, body {
