Top directories start expanded in panelbrowser

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -50,6 +50,7 @@
                         options="treeOptions"
                         on-selection="select(node)"
                         selected-node="selectedNode"
+                        expanded-nodes="expandedNodes"
                         >
                         <span data-ui-draggable="true" data-drag="node.id" data-drag-channel="{{node.type}}">{{node.name}}</span>
                     </treecontrol>
