Models can be uploaded

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/vendor/angular-native-dragdrop/draganddrop.js"></script>
     <script type="text/javascript" src="js/vendor/moment/min/moment.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/directives/customonchange.js"></script>
     <script type="text/javascript" src="js/directives/codetab.js"></script>
     <script type="text/javascript" src="js/directives/modeltab.js"></script>
     <script type="text/javascript" src="js/directives/panelbrowser.js"></script>
