--- a/client/app/interface-frame.html
+++ b/client/app/interface-frame.html
@@ -150,7 +150,7 @@
 
     </script>
 </head>
-<body data-ng-app="trafficEnv">
+<body data-ng-app="trafficEnv" class="iframe-body">
     <frame-content>
     </frame-content>
 </body>
